--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "dotenv": "^17.2.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
